--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ audio{position:fixed;top:420px;left:280px;}
 
 <body>
 
-<audio id="dzh" src="董贞 - 梦太晚.mp3" autoplay="autoplay" controls></audio>
+<audio id="dzh" src="http://play.baidu.com/?__m=mboxCtrl.playSong&__a=18702494&__o=song/s||playBtn&fr=zhdao||zhidao.baidu.com#" autoplay="autoplay" controls></audio>
 <audio id="Audiowx"><source src="http://dx.sc.chinaz.com/Files/DownLoad/sound1/201512/6682.mp3" type="audio/mpeg"></audio>
 
 </body>
