--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ audio{position:fixed;top:420px;left:280px;}
 
 <body>
 
-<audio id="dzh" src="http://music.163.com/#/song?id=29280591" autoplay="autoplay" controls></audio>
+<audio id="dzh" src="http://seo.yafcyy.com/tcs/audio/mtw.mp3" autoplay="autoplay" controls></audio>
 <audio id="Audiowx"><source src="http://dx.sc.chinaz.com/Files/DownLoad/sound1/201512/6682.mp3" type="audio/mpeg"></audio>
 
 </body>
